--- a/index.css
+++ b/index.css
@@ -76,6 +76,11 @@ button{
     height: 30px;
     margin: 5px;
     padding: 5px;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
 }
 
 .converter h3{
